lock in dependencies a bit to second digit

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dotaccess",
   "description": "A library to access objects using dot notation strings.",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "homepage": "https://github.com/nshah/nodejs-dotaccess",
   "author": "Naitik Shah <n@daaku.org>",
   "main": "lib/dotaccess",
@@ -9,9 +9,9 @@
     "type": "git",
     "url": "https://github.com/nshah/nodejs-dotaccess"
   },
-  "scripts": { "test": "NODE_PATH=./lib ./node_modules/.bin/mocha --ui exports" },
+  "scripts": { "test": "NODE_PATH=./lib mocha --ui exports" },
   "devDependencies": {
-    "mocha": ">= 0.12.0"
+    "mocha": "0.12.x"
   },
-  "engines": { "node": ">= 0.6.10" }
+  "engines": { "node": "0.6.x" }
 }
